--- a/index.html
+++ b/index.html
@@ -326,6 +326,33 @@
   </div>
 </nav>
 
+<!-- Categories Section -->
+<section class="categories-section">
+  <div class="categories-wrapper">
+    <!-- Categories -->
+    <div class="categories-flex">
+      <div class="categories-flex">
+        <a href="src/main/resources/pages/men.html"         class="category-item"><span>Men</span></a>
+        <a href="src/main/resources/pages/women.html"       class="category-item"><span>Women</span></a>
+        <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
+        <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
+        <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
+        <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Cases</span></a>
+      </div>
+    </div>
+
+    <!-- Sort Dropdown -->
+    <!--<div class="sort-wrapper">
+      <select id="sortDropdown" class="form-select form-select-sm" style="width: auto; border-radius: 20px; border: 1px solid var(&#45;&#45;black); background-color: var(&#45;&#45;white); color: var(&#45;&#45;black); padding: 0.2rem 1rem;">
+        <option selected disabled>Sort by</option>
+        <option value="relevance">Relevance</option>
+        <option value="low-to-high">Price: Low to High</option>
+        <option value="high-to-low">Price: High to Low</option>
+      </select>
+    </div>-->
+  </div>
+</section>
+
 <!-- Dynamic main section -->
 <main id="dynamicContent"></main>
 
