--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -45,8 +45,8 @@
         <h1 class="title">Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator</h1>
 
         <div class="price-section">
-            <div id="price">LKR 3,400.00</div>
-            <div class="original-price" id="originalPrice">LKR 4,369.28</div>
+            <div id="price">LKR 4,500.00</div>
+            <div class="original-price" id="originalPrice">LKR 5,169.28</div>
         </div>
 
         <p class="description">
@@ -57,23 +57,23 @@
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
-            <div class="color-option selected" data-price="3,400" data-original="4369.28">
+            <div class="color-option selected" data-price="4,500" data-original="5160.28">
                 <img src="../../assets/watches/1/watch 1 - 3.webp" alt="White Steel Black Surface" />
                 <div class="color-label">🔥Blue</div>
             </div>
-            <div class="color-option" data-price="3,340" data-original="4067.01">
+            <div class="color-option" data-price="4,400" data-original="5160.28">
                 <img src="../../assets/watches/1/watch 1 - 2.webp" alt="White Steel Black Surface" />
                 <div class="color-label">Gold</div>
             </div>
-            <div class="color-option" data-price="3,245" data-original="3782.25">
+            <div class="color-option" data-price="4,300" data-original="5160.28">
                 <img src="../../assets/watches/1/watch 1 - 4.webp" alt="Blue Steel Blue Surface" />
-                <div class="color-label">Silver</div>
+                <div class="color-label">🔥Silver</div>
             </div>
-            <div class="color-option" data-price="2,980" data-original="4701.26">
+            <div class="color-option" data-price="4,200" data-original="5160.28">
                 <img src="../../assets/watches/1/watch 1 - 5.webp" alt="Golden Strap Black Dial" />
                 <div class="color-label">Black-Rose</div>
             </div>
-            <div class="color-option" data-price="3,120" data-original="4556.98">
+            <div class="color-option" data-price="4,300" data-original="5160.28">
                 <img src="../../assets/watches/1/watch 1 - 6.webp" alt="Black Steel Rose Shell" />
                 <div class="color-label">Black</div>
             </div>
