--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -11,33 +11,6 @@
 </head>
 <body>
 
-<!-- Categories Section -->
-<section class="categories-section">
-  <div class="categories-wrapper">
-    <!-- Categories -->
-    <div class="categories-flex">
-      <div class="categories-flex">
-        <a href="src/main/resources/pages/men.html"         class="category-item"><span>Men</span></a>
-        <a href="src/main/resources/pages/women.html"       class="category-item"><span>Women</span></a>
-        <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
-        <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
-        <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
-        <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Cases</span></a>
-      </div>
-    </div>
-
-    <!-- Sort Dropdown -->
-    <!--<div class="sort-wrapper">
-      <select id="sortDropdown" class="form-select form-select-sm" style="width: auto; border-radius: 20px; border: 1px solid var(&#45;&#45;black); background-color: var(&#45;&#45;white); color: var(&#45;&#45;black); padding: 0.2rem 1rem;">
-        <option selected disabled>Sort by</option>
-        <option value="relevance">Relevance</option>
-        <option value="low-to-high">Price: Low to High</option>
-        <option value="high-to-low">Price: High to Low</option>
-      </select>
-    </div>-->
-  </div>
-</section>
-
 <!-- Title -->
 <h2>Featured Watches</h2>
 
@@ -56,8 +29,8 @@
         </p>
         <div class="price">
           <span class="currency">LKR</span>
-          <span class="current">3,400.00</span>
-          <span class="original">4,369.28</span>
+          <span class="current">4,500.00</span>
+          <span class="original">5,169.28</span>
         </div>
       </div>
     </div>
@@ -121,8 +94,8 @@
       <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">3,400.00</span>
-        <span class="original">4,369.28</span>
+        <span class="current">4,500.00</span>
+        <span class="original">5,169.28</span>
       </div>
     </div>
   </a>
@@ -209,11 +182,11 @@
   <a href="src/main/resources/pages/watches/Watch-5.html?id=7" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
-      <h4>CURREN Ladies' Watch</h4>
+      <h4>CURREN Businessmen's Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">7,000.00</span>
-        <span class="original">10,130.57</span>
+        <span class="current">9,200.00</span>
+        <span class="original">12,550.50</span>
       </div>
     </div>
   </a>
