--- a/src/main/resources/pages/bundles/Bundle-1.html
+++ b/src/main/resources/pages/bundles/Bundle-1.html
@@ -28,6 +28,7 @@
         <img src="../../assets/bundle/1/bundle%201%20-%203.webp" alt="Bundle 3" />
         <img src="../../assets/bundle/1/bundle%201%20-%204.webp" alt="Bundle 4" />
         <img src="../../assets/bundle/1/bundle%201%20-%205.webp" alt="Bundle 5" />
+        <img src="../../assets/bundle/1/bundle%201%20-%207.webp" alt="Bundle 5" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -45,8 +46,8 @@
         <h1 class="title">5pcs Men's Fashion Quartz Watch & Bracelet Set</h1>
 
         <div class="price-section">
-            <div id="price">LKR 1397.00</div>
-            <div class="original-price" id="originalPrice">LKR 2,390.69</div>
+            <div id="price">LKR 1999.00</div>
+            <div class="original-price" id="originalPrice">LKR 2,990.69</div>
         </div>
 
         <p class="description">
