--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -50,8 +50,8 @@
         </p>
         <div class="price">
           <span class="currency">LKR</span>
-          <span class="current">1,099.00</span>
-          <span class="original">1,391.37</span>
+          <span class="current">1,499.00</span>
+          <span class="original">2,391.37</span>
         </div>
       </div>
     </div>
@@ -71,8 +71,8 @@
         </p>
         <div class="price">
           <span class="currency">LKR</span>
-          <span class="current">1,397.00</span>
-          <span class="original">2,390.69</span>
+          <span class="current">1,999.00</span>
+          <span class="original">2,990.69</span>
         </div>
       </div>
     </div>
@@ -107,8 +107,8 @@
       <h4>Trendy And Elegant Quartz Wristwatch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,099.00</span>
-        <span class="original">1,391.37</span>
+        <span class="current">1,499.00</span>
+        <span class="original">2,391.37</span>
       </div>
     </div>
   </a>
@@ -120,8 +120,8 @@
       <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,397.00</span>
-        <span class="original">2,390.69</span>
+        <span class="current">1,999.00</span>
+        <span class="original">2,990.69</span>
       </div>
     </div>
   </a>
@@ -133,7 +133,7 @@
       <h4>Elegant Ladies Quartz Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,499.00</span>
+        <span class="current">2,000.00</span>
         <span class="original">2,100.55</span>
       </div>
     </div>
@@ -146,7 +146,7 @@
       <h4>6-Piece Women’s Watch & Bracelet Set</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,400.00</span>
+        <span class="current">1,5 00.00</span>
         <span class="original">2,450.55</span>
       </div>
     </div>
@@ -179,7 +179,7 @@
   </a>
 
   <!--MEN 3-->
-  <a href="src/main/resources/pages/watches/Watch-5.html?id=7" class="card-link">
+  <a href="src/main/resources/pages/watches/Watch-5.html?id=8" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
       <h4>CURREN Businessmen's Watch</h4>
@@ -187,6 +187,19 @@
         <span class="currency">LKR</span>
         <span class="current">9,200.00</span>
         <span class="original">12,550.50</span>
+      </div>
+    </div>
+  </a>
+
+  <!--COUPLE 2-->
+  <a href="src/main/resources/pages/couples/Couple-2.html?id=9" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/couples/2/couple 2 - 14.png" alt="Women's Classic Watch">
+      <h4>Couple POEDAGAR Luxury Watches</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">15,000.00</span>
+        <span class="original">21,550.50</span>
       </div>
     </div>
   </a>
@@ -204,20 +217,25 @@
 
   <div class="special-offer">
     <!-- Special‑offer items -->
-    <a href="src/main/resources/pages/watches/Watch-1.html?id=1" class="offer-link offer-item">
+    <a href="src/main/resources/pages/couples/Couple-2.html?id=1" class="offer-link offer-item">
       <div class="offer-watch">
         <div class="offer-image">
-          <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Special Watch 1">
+          <video autoplay muted loop playsinline>
+            <source src="../../assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <!--<img src="../../assets/couples/2/couple 2 - 14.png" alt="Couple Watch">-->
         </div>
+
         <div class="offer-details">
-          <h4>Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator</h4>
+          <h4>Couple POEDAGAR Luxury Watches</h4>
           <p class="offer-desc">
-            High‑quality build with a lightweight metal band – perfect for school, sports, holidays, or everyday wear.
+            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Zinc Alloy Case, Stainless Steel Strap
           </p>
           <div class="offer-price">
             <span class="currency">LKR</span>
-            <span class="current">3,400.00</span>
-            <span class="original">4,369.28</span>
+            <span class="current">15,000.00</span>
+            <span class="original">21,550.50</span>
           </div>
         </div>
       </div>
