--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -55,11 +55,25 @@
             <h4>Trendy And Elegant Quartz Wristwatch</h4>
             <div class="price">
                 <span class="currency">LKR</span>
-                <span class="current">1,099.00</span>
-                <span class="original">1,391.37</span>
+                <span class="current">1,499.00</span>
+                <span class="original">2,391.37</span>
             </div>
         </div>
     </a>
+
+    <!--MEN 3-->
+    <a href="../../resources/pages/watches/Watch-5.html?id=7" class="card-link">
+        <div class="card">
+            <img src="../../resources/assets/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
+            <h4>CURREN Businessmen's Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">9,200.00</span>
+                <span class="original">12,550.50</span>
+            </div>
+        </div>
+    </a>
+
 
 </div>
 
