--- a/src/main/resources/pages/watches/Watch-3.html
+++ b/src/main/resources/pages/watches/Watch-3.html
@@ -48,7 +48,7 @@
     <h1 class="title">Elegant Ladies Quartz Watch</h1>
 
     <div class="price-section">
-      <div id="price">LKR 1,499.00</div>
+      <div id="price">LKR 2,000.00</div>
       <div class="original-price" id="originalPrice">LKR 2,100.55</div>
     </div>
 
@@ -60,19 +60,19 @@
 
     <!-- Color Options with Price -->
     <div class="colors" id="colors">
-      <div class="color-option selected" data-price="1,499" data-original="2100.55">
+      <div class="color-option selected" data-price="2,000" data-original="2100.55">
         <img src="../../assets/watches/3/watch 3 - 1.webp" alt="White Steel Black Surface" />
         <div class="color-label">🔥Blue</div>
       </div>
-      <div class="color-option" data-price="1,499" data-original="2147.55">
+      <div class="color-option" data-price="2,000" data-original="2147.55">
         <img src="../../assets/watches/3/watch 3 - 2.webp" alt="White Steel Black Surface" />
-        <div class="color-label">Pink</div>
+        <div class="color-label">🔥Pink</div>
       </div>
-      <div class="color-option" data-price="1,499" data-original="2099.55">
+      <div class="color-option" data-price="2,000" data-original="2099.55">
         <img src="../../assets/watches/3/watch 3 - 5.webp" alt="Blue Steel Blue Surface" />
         <div class="color-label">Black</div>
       </div>
-      <div class="color-option" data-price="1,499" data-original="2100.55">
+      <div class="color-option" data-price="2,000" data-original="2100.55">
         <img src="../../assets/watches/3/watch 3 - 3.webp" alt="Golden Strap Black Dial" />
         <div class="color-label">Silver</div>
       </div>
