--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -221,7 +221,7 @@
       <div class="offer-watch">
         <div class="offer-image">
           <video autoplay muted loop playsinline>
-            <source src="../../assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
+            <source src="src/main/resources/assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <!--<img src="../../assets/couples/2/couple 2 - 14.png" alt="Couple Watch">-->
