--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -146,7 +146,7 @@
       <h4>6-Piece Women’s Watch & Bracelet Set</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,5 00.00</span>
+        <span class="current">1,500.00</span>
         <span class="original">2,450.55</span>
       </div>
     </div>
