pop up and luxury

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
         <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
         <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
         <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Cases</span></a>
+        <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>
       </div>
     </div>
 
@@ -377,7 +378,7 @@
           <li><a href="src/main/resources/pages/bundle.html">Bundle</a></li>
           <li><a href="src/main/resources/pages/couple.html">Couple</a></li>
           <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>
-          <li><a href="src/main/resources/pages/luxury.html">Luxury</a></li>
+          <li><a href="src/main/resources/pages/luxury.html">Cases</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -412,17 +413,20 @@
 <div id="popupCard" style="display:none;" class="popup-card-container">
   <div class="popup-card">
     <button class="popup-close" onclick="closePopup()">✕</button>
-    <a href="src/main/resources/pages/couples/Couple-1.html?id=5" class="card-link">
+
+    <!--COUPLE 2-->
+    <a href="src/main/resources/pages/couples/Couple-2.html?id=9" class="card-link">
       <div class="card">
-        <img src="src/main/resources/assets/couples/1/couple 1 - 1.webp" alt="Two Round Rhinestone Roman Dial">
-        <h4>Two Round Rhinestone Roman Dial</h4>
+        <img src="src/main/resources/assets/couples/2/couple 2 - 14.png" alt="Women's Classic Watch">
+        <h4>Couple POEDAGAR Luxury Watches</h4>
         <div class="price">
           <span class="currency">LKR</span>
-          <span class="current">5,299.00</span>
-          <span class="original">6,890.00</span>
+          <span class="current">15,000.00</span>
+          <span class="original">21,550.50</span>
         </div>
       </div>
     </a>
+
   </div>
 </div>
 
