--- a/src/main/resources/pages/couples/Couple-2.html
+++ b/src/main/resources/pages/couples/Couple-2.html
@@ -54,7 +54,7 @@
     </div>
 
     <p class="description">
-      Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Zinc Alloy Case, Stainless Steel Strap
+      Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Stainless Steel Strap
     </p>
 
     <div class="brand-label">Brand: POEDAGAR</div>
