--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -230,7 +230,7 @@
         <div class="offer-details">
           <h4>Couple POEDAGAR Luxury Watches</h4>
           <p class="offer-desc">
-            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Zinc Alloy Case, Stainless Steel Strap
+            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Stainless Steel Strap
           </p>
           <div class="offer-price">
             <span class="currency">LKR</span>
