--- a/src/main/resources/pages/luxury.html
+++ b/src/main/resources/pages/luxury.html
@@ -27,23 +27,10 @@
 </a>
 
 <!-- Title -->
-<h2>Couple Watches</h2>
+<h2>Luxury Watches</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
-
-  <!--COUPLE 2-->
-  <a href="../../resources/pages/couples/Couple-1.html?id=4" class="card-link">
-    <div class="card">
-      <img src="../../resources/assets/couples/1/couple 1 - 1.webp" alt="Women's Classic Watch">
-      <h4>Two Round Rhinestone Roman Dial</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">5,299.00</span>
-        <span class="original">6,890.00</span>
-      </div>
-    </div>
-  </a>
 
   <!--COUPLE 2-->
   <a href="../../resources/pages/couples/Couple-2.html?id=9" class="card-link">
