--- a/index.html
+++ b/index.html
@@ -414,6 +414,18 @@
   <div class="popup-card">
     <button class="popup-close" onclick="closePopup()">✕</button>
 
+    <!--<a href="src/main/resources/pages/couples/Couple-1.html?id=5" class="card-link">
+      <div class="card">
+        <img src="src/main/resources/assets/couples/1/couple 1 - 1.webp" alt="Two Round Rhinestone Roman Dial">
+        <h4>Two Round Rhinestone Roman Dial</h4>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">5,299.00</span>
+          <span class="original">6,890.00</span>
+        </div>
+      </div>
+    </a>-->
+
     <!--COUPLE 2-->
     <a href="src/main/resources/pages/couples/Couple-2.html?id=9" class="card-link">
       <div class="card">
