--- a/src/main/resources/pages/luxury.html
+++ b/src/main/resources/pages/luxury.html
@@ -32,6 +32,58 @@
 <!-- Products Grid -->
 <div class="products-grid">
 
+  <!--WATCH 1-->
+  <a href="../../resources/pages/watches/Watch-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
+      <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">4,500.00</span>
+        <span class="original">5,169.28</span>
+      </div>
+    </div>
+  </a>
+
+  <!--COUPLE 1-->
+  <a href="../../resources/pages/couples/Couple-1.html?id=6" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/couples/1/couple 1 - 1.webp" alt="Women's Classic Watch">
+      <h4>Two Round Rhinestone Roman Dial</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">5,299.00</span>
+        <span class="original">6,890.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 2-->
+  <a href="../../resources/pages/watches/Watch-4.html?id=7" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/watches/4/watch 4 - 8.webp" alt="Women's Classic Watch">
+      <h4>CURREN Ladies' Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">7,000.00</span>
+        <span class="original">10,130.57</span>
+      </div>
+    </div>
+  </a>
+
+  <!--MEN 3-->
+  <a href="../../resources/pages/watches/Watch-5.html?id=8" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
+      <h4>CURREN Businessmen's Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">9,200.00</span>
+        <span class="original">12,550.50</span>
+      </div>
+    </div>
+  </a>
+
   <!--COUPLE 2-->
   <a href="../../resources/pages/couples/Couple-2.html?id=9" class="card-link">
     <div class="card">
