--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -74,6 +74,19 @@
         </div>
     </a>
 
+    <!--MEN 4-->
+    <a href="../../resources/pages/watches/Watch-6.html?id=8" class="card-link">
+        <div class="card">
+            <img src="../../resources/assets/watches/6/watch 6 - 1.webp" alt="Men's Classic Watch">
+            <h4>Business Sports Men's Quartz Wrist Watch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">1,200.00</span>
+                <span class="original">2,500.50</span>
+            </div>
+        </div>
+    </a>
+
 
 </div>
 
