--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
           <li><a href="src/main/resources/pages/bundle.html">Bundle</a></li>
           <li><a href="src/main/resources/pages/couple.html">Couple</a></li>
           <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>
-          <li><a href="src/main/resources/pages/luxury.html">Cases</a></li>
+          <li><a href="src/main/resources/pages/cases.html">Cases</a></li>
+          <li><a href="src/main/resources/pages/luxury.html">Luxury</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
