--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -260,23 +260,79 @@
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
+<h2>Watch Cases</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
-
-  <!--WATCH 1-->
-  <a href="src/main/resources/pages/watches/Watch-1.html?id=1" class="card-link">
+  <!--CASE 1-->
+  <a href="src/main/resources/pages/cases/Case-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
-      <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
+      <img src="src/main/resources/assets/cases/1/case 1 - 1.webp" alt="Watch">
+      <h4>Classic Premium Watch Storage Box with Watch Pillows</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">3,400.00</span>
-        <span class="original">4,369.28</span>
+        <span class="current">500.00</span>
+        <span class="original">750.00</span>
       </div>
     </div>
   </a>
+
+  <!--CASE 2-->
+  <a href="src/main/resources/pages/cases/Case-2.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/cases/2/case 2 - 1.webp" alt="Watch">
+      <h4>ZOEJOE Wood Grain Watch Winder Box</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">13,000.00</span>
+        <span class="original">17,500.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--CASE 1-->
+  <a href="src/main/resources/pages/cases/Case-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/cases/1/case 1 - 1.webp" alt="Watch">
+      <h4>Classic Premium Watch Storage Box with Watch Pillows</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">500.00</span>
+        <span class="original">750.00</span>
+      </div>
+    </div>
+  </a>
+
+  <a href="src/main/resources/pages/cases/Case-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/cases/1/case 1 - 1.webp" alt="Watch">
+      <h4>Classic Premium Watch Storage Box with Watch Pillows</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">500.00</span>
+        <span class="original">750.00</span>
+      </div>
+    </div>
+  </a>
+
+  <a href="src/main/resources/pages/cases/Case-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/cases/1/case 1 - 1.webp" alt="Watch">
+      <h4>Classic Premium Watch Storage Box with Watch Pillows</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">500.00</span>
+        <span class="original">750.00</span>
+      </div>
+    </div>
+  </a>
+
 </div>
 
+
+<hr class="section-divider">
+
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
 </body>
 </html>
