--- a/src/main/resources/pages/cases.html
+++ b/src/main/resources/pages/cases.html
@@ -31,6 +31,8 @@
 
 <!-- Products Grid -->
 <div class="products-grid">
+
+  <!--CASE 1-->
   <a href="../../resources/pages/cases/Case-1.html?id=1" class="card-link">
     <div class="card">
       <img src="../../resources/assets/cases/1/case 1 - 1.webp" alt="Watch">
@@ -39,6 +41,19 @@
         <span class="currency">LKR</span>
         <span class="current">500.00</span>
         <span class="original">750.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--CASE 2-->
+  <a href="../../resources/pages/cases/Case-2.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/cases/2/case 2 - 1.webp" alt="Watch">
+      <h4>ZOEJOE Wood Grain Watch Winder Box</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">13,000.00</span>
+        <span class="original">17,500.00</span>
       </div>
     </div>
   </a>
