--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
         <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
         <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
-        <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Cases</span></a>
+        <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Boxes</span></a>
         <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>
       </div>
     </div>
@@ -378,7 +378,7 @@
           <li><a href="src/main/resources/pages/bundle.html">Bundle</a></li>
           <li><a href="src/main/resources/pages/couple.html">Couple</a></li>
           <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>
-          <li><a href="src/main/resources/pages/cases.html">Cases</a></li>
+          <li><a href="src/main/resources/pages/cases.html">Boxes</a></li>
           <li><a href="src/main/resources/pages/luxury.html">Luxury</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
