--- a/src/main/resources/pages/cases/Case-4.html
+++ b/src/main/resources/pages/cases/Case-4.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="../../css/watch.css" />
 
-
 </head>
 <body>
 
@@ -17,26 +16,24 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WQ4001</div>
+<div class="product-id">ID: WQ4003</div>
 
 <div class="container">
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/cases/2/case 2 - 1.webp" alt="Case 2" class="active" />
-        <img src="../../assets/cases/2/case 2 - 3.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 4.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 5.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 6.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 7.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 8.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 9.webp" alt="Case 2" />
+        <img src="../../assets/cases/4/case 4 - 1.webp" alt="Case 4" class="active" />
+        <img src="../../assets/cases/4/case 4 - 2.webp" alt="Case 4" />
+        <img src="../../assets/cases/4/case 4 - 3.webp" alt="Case 4" />
+        <img src="../../assets/cases/4/case 4 - 4.webp" alt="Case 4" />
+        <img src="../../assets/cases/4/case 4 - 5.webp" alt="Case 4" />
+        <img src="../../assets/cases/4/case 4 - 6.webp" alt="Case 4" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/cases/2/case 2 - 1.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/cases/4/case 4 - 1.webp" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -46,30 +43,17 @@
     <!-- Product Details -->
     <div class="details">
 
-        <h1 class="title">Classic Premium Watch Storage Box with Watch Pillows</h1>
+        <h1 class="title">Portable Watch Box</h1>
 
         <div class="price-section">
-            <div id="price">LKR 13,000.00</div>
-            <div class="original-price" id="originalPrice">LKR 17,500.00</div>
+            <div id="price">LKR 1,500.00</div>
+            <div class="original-price" id="originalPrice">LKR 2,500.00</div>
         </div>
 
         <p class="description">
-            ZOEJOE Wood Grain Watch Winder Box - USB Powered, Flexible Pillow for Men & Women's Automatic Watches, Display Case Included
+            Portable Watch Box - Durable Polyester Material, Fabric Lined - Accessory and Charger Storage Case for Watch Enthusiasts - Ideal Gift for Watch Lovers, Watch Storage Case|Stylish Watch Case|Durable Watch Case
         </p>
 
-        <div class="brand-label">Brand: ZOEJOE</div>
-
-        <!-- Color Options with Price -->
-        <div class="colors" id="colors">
-            <div class="color-option selected" data-price="13,000" data-original="17500.00">
-                <img src="../../assets/cases/2/case 2 - 8.webp" alt="White Steel Black Surface" />
-                <div class="color-label">White</div>
-            </div>
-            <div class="color-option" data-price="13,000" data-original="17500.00">
-                <img src="../../assets/cases/2/case 2 - 9.webp" alt="White Steel Black Surface" />
-                <div class="color-label">Gray</div>
-            </div>
-        </div>
 
         <div class="quantity">
             <label for="qty">Qty:</label>
