--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -16,7 +16,7 @@
   <!-- Title -->
   <h2>Featured Watches</h2>
   <!-- #1 -->
-  <a href="src/main/resources/pages/watches/Watch-1.html?id=1"
+  <!--<a href="src/main/resources/pages/watches/Watch-1.html?id=1"
      class="featured-link featured-watch-item">
     <div class="featured-watch">
       <div class="featured-image">
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-  </a>
+  </a>-->
 
   <!-- #2 -->
   <a href="src/main/resources/pages/watches/Watch-2.html?id=2"
@@ -77,6 +77,27 @@
       </div>
     </div>
   </a>
+
+  <!-- #4 -->
+  <a href="src/main/resources/pages/cases/Case-2.html?id=1"
+     class="featured-link featured-watch-item">
+    <div class="featured-watch">
+      <div class="featured-image">
+        <img src="src/main/resources/assets/cases/2/case 2 - 1.webp" alt="Watch 1">
+      </div>
+      <div class="featured-details">
+        <h4>ZOEJOE Wood Grain Watch Winder Box</h4>
+        <p class="featured-desc">
+          ZOEJOE Wood Grain Watch Winder Box - USB Powered, Flexible Pillow for Men & Women's Automatic Watches, Display Case Included        </p>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">13,000.00</span>
+          <span class="original">17,500.00</span>
+        </div>
+      </div>
+    </div>
+  </a>
+
 </div>
 
 <hr class="section-divider">
@@ -260,7 +281,7 @@
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
-<h2>Watch Cases</h2>
+<h2>Watch Boxes</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
