--- a/src/main/resources/pages/cases/Case-3.html
+++ b/src/main/resources/pages/cases/Case-3.html
@@ -17,26 +17,25 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WQ4001</div>
+<div class="product-id">ID: WQ4002</div>
 
 <div class="container">
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/cases/2/case 2 - 1.webp" alt="Case 2" class="active" />
-        <img src="../../assets/cases/2/case 2 - 3.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 4.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 5.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 6.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 7.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 8.webp" alt="Case 2" />
-        <img src="../../assets/cases/2/case 2 - 9.webp" alt="Case 2" />
+        <img src="../../assets/cases/3/case 3 - 1.webp" alt="Case 3" class="active" />
+        <img src="../../assets/cases/3/case 3 - 2.webp" alt="Case 3" />
+        <img src="../../assets/cases/3/case 3 - 3.webp" alt="Case 3" />
+        <img src="../../assets/cases/3/case 3 - 4.webp" alt="Case 3" />
+        <img src="../../assets/cases/3/case 3 - 5.webp" alt="Case 3" />
+        <img src="../../assets/cases/3/case 3 - 6.webp" alt="Case 3" />
+        <img src="../../assets/cases/3/case 3 - 7.webp" alt="Case 3" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/cases/2/case 2 - 1.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/cases/3/case 3 - 1.webp" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -46,30 +45,16 @@
     <!-- Product Details -->
     <div class="details">
 
-        <h1 class="title">Classic Premium Watch Storage Box with Watch Pillows</h1>
+        <h1 class="title">Single Compartment Watch Boxes with Pillows</h1>
 
         <div class="price-section">
-            <div id="price">LKR 13,000.00</div>
-            <div class="original-price" id="originalPrice">LKR 17,500.00</div>
+            <div id="price">LKR 2,500.00</div>
+            <div class="original-price" id="originalPrice">LKR 3,650.00</div>
         </div>
 
         <p class="description">
-            ZOEJOE Wood Grain Watch Winder Box - USB Powered, Flexible Pillow for Men & Women's Automatic Watches, Display Case Included
+            Single Compartment Watch Boxes with Pillows, Faux Leather Gift Boxes for Bracelets, Jewelry Watch Storage, Watch Display Stand for Men And Women, Single Watch Roll Organizer, Black
         </p>
-
-        <div class="brand-label">Brand: ZOEJOE</div>
-
-        <!-- Color Options with Price -->
-        <div class="colors" id="colors">
-            <div class="color-option selected" data-price="13,000" data-original="17500.00">
-                <img src="../../assets/cases/2/case 2 - 8.webp" alt="White Steel Black Surface" />
-                <div class="color-label">White</div>
-            </div>
-            <div class="color-option" data-price="13,000" data-original="17500.00">
-                <img src="../../assets/cases/2/case 2 - 9.webp" alt="White Steel Black Surface" />
-                <div class="color-label">Gray</div>
-            </div>
-        </div>
 
         <div class="quantity">
             <label for="qty">Qty:</label>
