--- a/src/main/resources/pages/accessories/Accessory-1.html
+++ b/src/main/resources/pages/accessories/Accessory-1.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../../assets/logo/W.png" type="image/x-icon">
 
-    <title>Box Details | Dionz</title>
+    <title>Accessory Details | Dionz</title>
 
     <link rel="stylesheet" href="../../css/watch.css" />
-
 
 </head>
 <body>
@@ -17,25 +16,25 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WQ4005</div>
+<div class="product-id">ID: WA3001</div>
 
 <div class="container">
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/cases/5/case 5 - 1.webp" alt="Case 5" class="active" />
-        <img src="../../assets/cases/5/case 5 - 2.webp" alt="Case 5"/>
-        <img src="../../assets/cases/5/case 5 - 3.webp" alt="Case 5" />
-        <img src="../../assets/cases/5/case 5 - 4.webp" alt="Case 5" />
-        <img src="../../assets/cases/5/case 5 - 5.webp" alt="Case 5" />
-        <img src="../../assets/cases/5/case 5 - 6.webp" alt="Case 5" />
-        <img src="../../assets/cases/5/case 5 - 7.webp" alt="Case 5" />
+        <img src="../../assets/accessories/1/accessory 1 - 1.webp" alt="Accessory 1" class="active" />
+        <img src="../../assets/accessories/1/accessory 1 - 3.webp" alt="Accessory 1" />
+        <img src="../../assets/accessories/1/accessory 1 - 4.webp" alt="Accessory 1" />
+        <img src="../../assets/accessories/1/accessory 1 - 5.webp" alt="Accessory 1" />
+        <img src="../../assets/accessories/1/accessory 1 - 6.webp" alt="Accessory 1" />
+        <img src="../../assets/accessories/1/accessory 1 - 7.webp" alt="Accessory 1" />
+        <img src="../../assets/accessories/1/accessory 1 - 1.webp" alt="Accessory 1" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/cases/5/case 5 - 1.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/accessories/1/accessory 1 - 1.webp" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -44,16 +43,15 @@
 
     <!-- Product Details -->
     <div class="details">
-
-        <h1 class="title">Watch Storage Box with Soft Pillows</h1>
+        <h1 class="title">Cartoon Panda Resin Statue with Key Holder</h1>
 
         <div class="price-section">
-            <div id="price">LKR 2,000.00</div>
-            <div class="original-price" id="originalPrice">LKR 2,700.00</div>
+            <div id="price">LKR 11,000.00</div>
+            <div class="original-price" id="originalPrice">LKR 15,300.00</div>
         </div>
 
         <p class="description">
-            Watch Storage Box with Soft Pillows, Hard Case & Compact Design - Durable Organizer for Large/Small Watches, Jewelry & Accessories, Watch Storage Box, Jewelry Protection, Sleek Appearance, Velvet Lined Interior
+            Cartoon Panda Resin Statue with Key Holder, Multi-Functional Home Decor for Living Room, Entryway, or Office, Indoor/Outdoor Versatile Storage Organizer, No Electricity Needed, Cute Panda Design with Golden Tray and Hooks for Keys, Bags, and Accessories, Perfect Housewarming Gift, Best for Christmas, Perfect for Thanksgiving
         </p>
 
 
@@ -77,7 +75,7 @@
 <!-- Promo Video Section -->
 <div class="promo-video">
     <video autoplay muted loop playsinline>
-        <source src="../../assets/cases/2/case%202%20-%202.mp4" type="video/mp4" />
+        <source src="../../assets/accessories/1/accessory%201%20-%202.mp4" type="video/mp4" />
         Your browser does not support the video tag.
     </video>
 </div>
