--- a/src/main/resources/pages/cases.html
+++ b/src/main/resources/pages/cases.html
@@ -57,6 +57,45 @@
       </div>
     </div>
   </a>
+
+  <!--CASE 3-->
+  <a href="../../resources/pages/cases/Case-3.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/cases/3/case 3 - 1.webp" alt="Watch">
+      <h4>Single Compartment Watch Boxes with Pillows</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,500.00</span>
+        <span class="original">3,650.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--CASE 4-->
+  <a href="../../resources/pages/cases/Case-4.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/cases/4/case 4 - 1.webp" alt="Watch">
+      <h4>Portable Watch Box</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,500.00</span>
+        <span class="original">2,500.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--CASE 5-->
+  <a href="../../resources/pages/cases/Case-5.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/cases/5/case 5 - 1.webp" alt="Watch">
+      <h4>Watch Storage Box with Soft Pillows</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,000.00</span>
+        <span class="original">2,700.00</span>
+      </div>
+    </div>
+  </a>
 </div>
 
 <!-- Browse More Button -->
