--- a/src/main/resources/pages/cases/Case-4.html
+++ b/src/main/resources/pages/cases/Case-4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="../../assets/logo/W.png" type="image/x-icon">
 
-    <title>Watch Details | Dionz</title>
+    <title>Box Details | Dionz</title>
 
     <link rel="stylesheet" href="../../css/watch.css" />
 
