--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -8,6 +8,31 @@
   <link rel="stylesheet" href="src/main/resources/css/dashboard.css" />
   <link rel="stylesheet" href="src/main/resources/css/special-offer.css" />
 
+  <style>
+    .browse-more-wrapper {
+      display: flex;
+      justify-content: center;
+      margin: 1.5rem 0;
+    }
+
+    .button-browse-more {
+      border: 1px solid #c2a563;
+      background-color: #edcd84;
+      border-radius: 1rem;
+      padding: 0.1rem 1.2rem;
+      font-size: 0.9rem;
+      text-decoration: none;
+      color: black;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .button-browse-more:hover {
+      background-color: #c2a563;
+      color: white;
+    }
+
+  </style>
+
 </head>
 <body>
 
@@ -349,13 +374,68 @@
       </div>
     </div>
   </a>
-
 </div>
+
+<div class="browse-more-wrapper">
+  <a href="src/main/resources/pages/cases.html" class="button-browse-more">Browse More</a>
+</div>
+
 
 
 <hr class="section-divider">
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
+
+<h2>Accessories</h2>
+
+<!-- Products Grid -->
+<div class="products-grid">
+  <!--ACCESSORY 1-->
+  <a href="src/main/resources/pages/accessories/Accessory-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/accessories/1/accessory 1 - 1.webp" alt="Watch">
+      <h4>Cartoon Panda Resin Statue with Key Holder</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">11,000.00</span>
+        <span class="original">15,300.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--ACCESSORY 2-->
+  <a href="src/main/resources/pages/accessories/Accessory-2.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/accessories/2/accessory 2 - 1.webp" alt="Watch">
+      <h4>French Bulldog Resin Cabinet Key Holder Organizer</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">12,000.00</span>
+        <span class="original">17,630.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--ACCESSORY 3-->
+  <a href="src/main/resources/pages/accessories/Accessory-3.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/accessories/3/accessory 3 - 2.webp" alt="Watch">
+      <h4>KEMORELA Rabbit Key Storage Ornament</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">6,500.00</span>
+        <span class="original">12,700.00</span>
+      </div>
+    </div>
+  </a>
+
+</div>
+
+<div class="browse-more-wrapper">
+  <a href="src/main/resources/pages/accessories.html" class="button-browse-more">Browse More</a>
+</div>
+
+
 </body>
 </html>
