--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -437,5 +437,11 @@
 </div>
 
 
+<hr class="section-divider">
+
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
+
+
 </body>
 </html>
