--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="src/main/resources/css/dashboard.css" />
   <link rel="stylesheet" href="src/main/resources/css/special-offer.css" />
+  <link rel="stylesheet" href="src/main/resources/css/category-section.css" />
+
 
   <style>
     .browse-more-wrapper {
@@ -265,6 +267,7 @@
 
 </div>
 
+
 <hr class="section-divider">
 
 <!------------------------------------------------------------------------------------------------------------------------>
@@ -441,6 +444,67 @@
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
+
+<!-- Category Section -->
+<h2 style="color: #917c4c">Shop by Category</h2>
+
+<div class="category-grid">
+  <!-- MEN -->
+  <a href="src/main/resources/pages/men.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/men 2.jpg" alt="Men's Watches">
+      <h4>Mens Watches</h4>
+    </div>
+  </a>
+
+  <!-- WOMEN -->
+  <a href="src/main/resources/pages/women.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/women 1.webp" alt="Women's Watches">
+      <h4>Womens Watches</h4>
+    </div>
+  </a>
+
+  <!-- BUNDLE -->
+  <a href="src/main/resources/pages/bundle.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/bundle 1.webp" alt="Bundles">
+      <h4>Bundles</h4>
+    </div>
+  </a>
+
+  <!-- COUPLE -->
+  <a href="src/main/resources/pages/couple.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/couple 1.jpg" alt="Couple Watches">
+      <h4>Couple Watches</h4>
+    </div>
+  </a>
+
+  <!-- ACCESSORY -->
+  <a href="src/main/resources/pages/accessories.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/accessory 1.webp" alt="Accessories">
+      <h4>Accessories</h4>
+    </div>
+  </a>
+
+  <!-- BOXES -->
+  <a href="src/main/resources/pages/cases.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/boxes 1.jpg" alt="Boxes">
+      <h4>Boxes</h4>
+    </div>
+  </a>
+
+  <!-- LUXURY -->
+  <a href="src/main/resources/pages/luxury.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/luxury 1.Webp" alt="Luxury Watches">
+      <h4>Luxury Watches</h4>
+    </div>
+  </a>
+</div>
 
 
 </body>
