--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -500,7 +500,7 @@
   <!-- LUXURY -->
   <a href="src/main/resources/pages/luxury.html?id=1" class="category-card-link">
     <div class="category-card">
-      <img src="src/main/resources/assets/imgs/luxury 1.Webp" alt="Luxury Watches">
+      <img src="src/main/resources/assets/imgs/luxury 1.webp" alt="Luxury Watches">
       <h4>Luxury Watches</h4>
     </div>
   </a>
